--- a/PopupTabLayout/PopupTabLayout.module.less
+++ b/PopupTabLayout/PopupTabLayout.module.less
@@ -93,6 +93,10 @@
 			outline-offset: -@lime-overlay-outline-width;
 		}
 
+		:global(.highContrast) & .tabGroup {
+			background-color: @lime-popuptablayout-content-background-color;
+		}
+
 		:global(.noAnimation) & {
 			.tabs,
 			.content .panels::before {
